Portfolio update - rewriting the descriptions

--- a/index.html
+++ b/index.html
@@ -589,9 +589,8 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-3.png" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">Prodos is the very first website I built as the final project of "Thirty Days to Learn HTML and CSS". It might be ideal for small business owners or solo-entrepreneurs. No javascript was used to make this site. I used only
-                                    HTML, CSS and a little bit of bootstrap.</p>
-
+                                <p class="mb-5">July 2019 - Prodos is the very first website I built as the final project of "Thirty Days to Learn HTML and CSS". It might be ideal for small business owners or solo-entrepreneurs. No javascript was used to make this site.
+                                    I used only HTML, CSS and a little bit of bootstrap.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 <a class="btn btn-primary" href="projects/03.prodos/index.html" target="_blank">See Page</a>
                                 </button>
@@ -629,16 +628,10 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-5.png" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">BBC clone is the second project that I built as a part of "The Complete Web Developer Course 2.0". I used only HTML and CSS to build this website. Although it needs a bit more css styling, it looks pretty real, doesn't
-                                    it?
-                                </p>
-                                <button class="btn btn-primary" href="#" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
-                  Close 
-                </button>
-                                <a class="btn btn-primary" href="projects/05.bbc/index.html" target="_blank">
-                  See Page
-                </a>
+                                <p class="mb-5">July 2019 - BBC clone is the second project that I built as a part of "The Complete Web Developer Course 2.0". I used only HTML and CSS to build this website. Although it needs a bit more css styling, it looks pretty real
+                                    doesn't it?</p>
+                                <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
+                                <a class="btn btn-primary" href="projects/05.bbc/index.html" target="_blank">See Page</a>
                             </div>
                         </div>
                     </div>
@@ -673,14 +666,9 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-6.png" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">This is another project that I built with the help of the "Practical Front-end Web Development - Learn With Projects" course. The page is fully responsive. It will soon be ready.</p>
-                                <button class="btn btn-primary" href="#" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
-                  Close 
-                </button>
-                                <a class="btn btn-primary" href="projects/06.comingSoon/index.html" target="_blank">
-                  See Page
-                </a>
+                                <p class="mb-5">September 2019 - This is another project that I built with the help of the "Practical Front-end Web Development - Learn With Projects" course. The page is fully responsive. It will soon be ready.</p>
+                                <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
+                                <a class="btn btn-primary" href="projects/06.comingSoon/index.html" target="_blank">See Page</a>
                             </div>
                         </div>
                     </div>
@@ -715,8 +703,8 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-7.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">This tribute page is one of the projects that I built as a part of the "Responsive Web Design Projects" course on www.freecodecamp.com. The video on this page is from my YouTube channel (Emuallim). I love creating white-board
-                                    animation videos as much as coding.</p>
+                                <p class="mb-5">July 2019 - This tribute page is one of the projects that I built as a part of the "Responsive Web Design Projects" course on www.freecodecamp.com. The video on this page is from my YouTube channel (Emuallim). I love creating
+                                    white-board animation videos as much as coding.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close 
@@ -758,8 +746,8 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-8.png" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">This survey is another project that I built as a part of the "Responsive Web Design Projects" course on www.freecodecamp.com. I tried my best to make it as fun as possible because I realised that coding is a pretty formal
-                                    thing where missing single a comma might crash an entire website and humor makes coding more enjoyable, no matter the failures.</p>
+                                <p class="mb-5">July 2019 - This survey is another project that I built as a part of the "Responsive Web Design Projects" course on www.freecodecamp.com. I tried my best to make it as fun as possible because I realised that coding is a
+                                    pretty formal thing where missing single a comma might crash an entire website and humor makes coding more enjoyable, no matter the failures.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close 
@@ -801,7 +789,7 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-9.png" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">This is one of the projects that I built with the help of the "Practical Front-end Web Development - Learn With Projects" course. The page is fully responsive.It has a sticky header and animated elements.</p>
+                                <p class="mb-5">August 2019 - This is one of the projects that I built with the help of the "Practical Front-end Web Development - Learn With Projects" course. The page is fully responsive.It has a sticky header and animated elements.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close
@@ -831,7 +819,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">blitz</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">documentation</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -843,7 +831,7 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-10.png" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">This survey is another project that I built as a part of the "Responsive Web Design Projects" course on www.freecodecamp.com.</p>
+                                <p class="mb-5">September 2019 - Documentation another project that I built as a part of the "Responsive Web Design Projects" course on www.freecodecamp.com and I did b/c I wanted to have the curriculum for offline reference.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close
@@ -871,7 +859,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">blitz</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Blitz</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -883,8 +871,7 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-11.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">This survey is another project that I built as a part of the "Responsive Web Design Projects" course on www.freecodecamp.com. I tried my best to make it as fun as possible because I realised that coding is a pretty formal
-                                    thing where missing single a comma might crash an entire website and humor makes coding more enjoyable, no matter the failures.</p>
+                                <p class="mb-5">October 2019 - I created Blitz as a part of Foundations of Front-End Web Development 2017 course and it is the very first website which I built fully. All the pages are included, not just the home page.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 <a class="btn btn-primary" href="projects/011.myblitz/index.html" target="_blank">See Page</a>
                             </div>
@@ -907,7 +894,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">blitz</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Word Camp</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -919,8 +906,7 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-12.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">This survey is another project that I built as a part of the "Responsive Web Design Projects" course on www.freecodecamp.com. I tried my best to make it as fun as possible because I realised that coding is a pretty formal
-                                    thing where missing single a comma might crash an entire website and humor makes coding more enjoyable, no matter the failures.</p>
+                                <p class="mb-5">November 2019 - After creating some projects, I discovered an awesome thing called CSS Grid and built this simple website using only grid. It is super responsive and there is no bootstrap at all.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 <a class="btn btn-primary" href="projects/012.wordcamp/index.html" target="_blank">See Page</a>
                             </div>
@@ -943,7 +929,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">blitz</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Grid Theme</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -955,8 +941,7 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-13.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">This survey is another project that I built as a part of the "Responsive Web Design Projects" course on www.freecodecamp.com. I tried my best to make it as fun as possible because I realised that coding is a pretty formal
-                                    thing where missing single a comma might crash an entire website and humor makes coding more enjoyable, no matter the failures.</p>
+                                <p class="mb-5">August 2019 - To learn more about grid, I found a youtube video and built this website with the help of it. It is super responsive. I started to fall in love with CSS Grid.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 <a class="btn btn-primary" href="projects/013.gridtheme/index.html" target="_blank">See Page</a>
                             </div>
