portfolio update is 99% done. Resume button is left

--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-9.png" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">August 2019 - This is one of the projects that I built with the help of the "Practical Front-end Web Development - Learn With Projects" course. The page is fully responsive.It has a sticky header and animated elements.</p>
+                                <p class="mb-5">August 2019 - This is one of the projects that I built with the help of the "Practical Front-end Web Development - Learn With Projects" course. The page is fully responsive. It has a sticky header and animated elements.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close
@@ -894,7 +894,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Word Camp</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">WordCamp</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -1192,7 +1192,8 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-20.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">April 2020 - "Random Quotes" is second javascript focused project that I built as a part of the "Build 100 Javascript Projects" challenge. JavaScript feels like magic to me because you can do really cool things with it.</p>
+                                <p class="mb-5">April 2020 - "Random Quotes" is the second javascript focused project that I built as a part of the "Build 100 Javascript Projects" challenge. JavaScript feels like magic to me because you can do really cool things with
+                                    it.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 <a class="btn btn-primary" href="projects/019.jsProjects/03-randomQuotes/index.html" target="_blank">See Page</a>
                             </div>
@@ -1262,7 +1263,7 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-22.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">April 2020 - Counter is a very simple project from "100 JavaScript Projects" challenge. Even thought its very simple, I still looks amazing to me to give life to a webpage by writing a few lines of code.</p>
+                                <p class="mb-5">April 2020 - Counter is a very simple project from "100 JavaScript Projects" challenge. Even though its very simple, I still think its amazing to be able to give life to a webpage by writing a few lines of code.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 <a class="btn btn-primary" href="projects/019.jsProjects/05-counter/index.html" target="_blank">See Page</a>
                             </div>
@@ -1297,8 +1298,7 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-23.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">This survey is another project that I built as a part of the "Responsive Web Design Projects" course on www.freecodecamp.com. I tried my best to make it as fun as possible because I realised that coding is a pretty formal
-                                    thing where missing single a comma might crash an entire website and humor makes coding more enjoyable, no matter the failures.</p>
+                                <p class="mb-5">April 2020 - I built the image slider by using the methods from the "counter" project. I added some of the most popular foods from Uzbek cuisine. It is mouth-watering isn't it?</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 <a class="btn btn-primary" href="projects/019.jsProjects/06-imageSlider/index.html" target="_blank">See Page</a>
                             </div>
@@ -1321,7 +1321,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">blitz</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Testimonials</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -1333,8 +1333,7 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-24.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">This survey is another project that I built as a part of the "Responsive Web Design Projects" course on www.freecodecamp.com. I tried my best to make it as fun as possible because I realised that coding is a pretty formal
-                                    thing where missing single a comma might crash an entire website and humor makes coding more enjoyable, no matter the failures.</p>
+                                <p class="mb-5">April 2020 - Testimonials is the project numero seven from the "Build 100 JavaScript Projects" challenge. I combined all the previously acquired knowledge to build this and added some animation to it as well.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 <a class="btn btn-primary" href="projects/019.jsProjects/07-testimonials/index.html" target="_blank">See Page</a>
                             </div>
