resume button done as well

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 
             <!-- About Section Button -->
             <div class="text-center mt-4">
-                <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/themes/freelancer/">
+                <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/file/d/1fhIuG_CcIvTxxUXqqhlStVtxyL8diMTh/view?usp=drivesdk" target="_blank">
                     <i class="fas fa-download mr-2"></i> Resume
                 </a>
             </div>
@@ -1193,7 +1193,8 @@
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-20.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
                                 <p class="mb-5">April 2020 - "Random Quotes" is the second javascript focused project that I built as a part of the "Build 100 Javascript Projects" challenge. JavaScript feels like magic to me because you can do really cool things with
-                                    it.</p>
+                                    it.
+                                </p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 <a class="btn btn-primary" href="projects/019.jsProjects/03-randomQuotes/index.html" target="_blank">See Page</a>
                             </div>
