last touch to update my portfolio

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                         and simple design.
                     </p>
                     <p class="lead">
-                        I’ve built web applications using <b>HTML5, CSS3, Bootstrap, Javascript, JQuery and React</b> and have a foundation in web design and development. I've recently completed 300 hours of
+                        I’ve built web applications using <b>HTML5, CSS3, Bootstrap, Javascript, JQuery (and React soon)</b> and have a foundation in web design and development. I've recently completed 300 hours of
                         <a href="http://www.freecodecamp.org">
                             <i style="color: white;">“Responsive Web Design Projects”</i>
                         </a>
@@ -1217,7 +1217,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">blitz</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Age Magic</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
