--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
 
             <!-- Masthead Subheading -->
-            <p class="masthead-subheading font-weight-light mb-0">Projects below go from the oldest to the newest</p>
+            <p class="masthead-subheading font-weight-light mb-0">The projects below go from oldest (top) to newest (bottom)</p>
 
         </div>
     </header>
