--- a/projects/019.jsProjects/08-tip/index.html
+++ b/projects/019.jsProjects/08-tip/index.html
@@ -13,21 +13,33 @@
 </head>
 
 <body>
-    <input class="output1">
-    <input type="text" value="100">
+    <div></div>
+    <input value="100">
     <button>Tip</button>
 
     <script>
         const output1 = document.querySelector('div')
         const input2 = document.querySelector('input')
         const btn3 = document.querySelector('button')
+        const colors = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 'A', 'B', 'C', 'D', 'E', 'F']
 
         btn3.addEventListener('click', calcTip)
+        btn3.addEventListener('click', changeColor)
 
-        function calcTip(e) {
-            let tip = (input2.value * 0.15).toFixed(2)
-            let text = `You should tip $${tip} on $${input2.value}`
-            output1.contains = tip;
+        function calcTip() {
+            let tip = (input2.value * 0.15).toFixed(2);
+            let text = `<h2>You should tip $${tip} on $${input2.value}</h2>`;
+            output1.innerHTML = text;
+            // output1.innerText = text; - this "innerText" thing took me at least 5 hours to find. It was supposed to be "innerHTML".
+        }
+
+        function changeColor() {
+            let hex = "#"
+            for (let i = 0; i < 6; i++) {
+                let random = Math.floor(Math.random() * colors.length)
+                hex += colors[random]
+            }
+            document.body.style.backgroundColor = hex;
         }
     </script>
 </body>
