project 8 - tip calculator: learning the js by heart

--- a/projects/019.jsProjects/08-tipCalculator/index.html
+++ b/projects/019.jsProjects/08-tipCalculator/index.html
@@ -56,13 +56,12 @@
 </head>
 
 <body>
-    <h1><span id="tip-word">Tip</span> calculator</h1>
+    <h1><span id="tip-word">Tip</span> Calculator</h1>
     <div id="calculator">
-        <label>Bill Amount:</label><input id="bill-amount"></br>
-        <label>Percentage Tip:</label><input id="percentage-tip"></br>
-        <label>Tip Amount:</label><input id="tip-amount" disabled></br>
-        <label>Total:</label><input id="total" disabled></br>
-        <button id="calculate">Calculate</button>
+        <label for="">Bill Amount:</label><input type="text" id="bill-amount">
+        <label for="">Percentage Tip:</label><input type="text" id="percentage-tip">
+        <label for="">Tip Amount</label><input type="text" id="tip-amount" disabled>
+        <label for="">Total</label><input type="text" id="total" disabled>
     </div>
     <script>
         let billAmount = document.getElementById('bill-amount');
