project 8 - still practicing

--- a/projects/019.jsProjects/08-tipCalculator/index.html
+++ b/projects/019.jsProjects/08-tipCalculator/index.html
@@ -74,37 +74,24 @@
         let calculate = document.getElementById('calculate');
 
         calculate.addEventListener('click', function() {
-                billAmount = Number(billAmount.value);
-                percentTip = Number(percentTip.value);
+            billAmount = Number(billAmount.value);
+            percentTip = Number(percentTip.value);
 
-                if (isNaN(billAmount) || billAmount <= 0 || billAmount === 0) {
-                    alert('Please enter a valid Bill Amount');
-                } else if (isNaN(percentTip) || percentTip <= 0 || percentTip === 0) {
-                    alert('Please enter a valid Tip Percentage')
-                } else {
-                    let calculatedTip = percentTip / 100 * billAmount;
-                    tipAmount.value = '$' + calculatedTip;
+            if (isNaN(billAmount) || billAmount <= 0 || billAmount === 0) {
+                alert('Please enter a valid Bill Amount')
+            } else if (isNaN(percentTip) || percentTip <= 0 || percentTip === 0) {
+                alert('Please enter a valid Tip Percentage')
+            } else {
+                let calculatedTip = percentTip / 100 * billAmount;
+                tipAmount.value = calculatedTip;
 
-                    let calculatedTotal = billAmount + calculatedTip;
-                    total.value = '$' + calculatedTotal;
-                }
-            })
-            // calculate.addEventListener('click', function() {
-            //     billAmount = Number(billAmount.value);
-            //     percentTip = Number(percentTip.value);
+                let calculatedTotal = billAmount + calculatedTip;
+                total.value = calculatedTotal;
+            }
+        })
 
-        //     if (isNaN(billAmount) || billAmount <= 0 || billAmount === null) {
-        //         alert('Please enter a valid Bill Amount')
-        //     } else if (isNaN(percentTip) || percentTip <= 0 || percentTip === null) {
-        //         alert('Please enter a valid Tip Percentage')
-        //     } else {
-        //         let calculatedTip = percentTip / 100 * billAmount;
-        //         tipAmount.value = '$' + calculatedTip;
-
-        //         let calculatedTotal = billAmount + calculatedTip;
-        //         total.value = '$' + calculatedTotal;
-        //     }
-        // })
+        // (5) / 100 * (250) = 12.5 (calculated tip)
+        // 12.5 + 250 = 262.5 (calculated total)
     </script>
 </body>
 
