project 8 - styling almost done

--- a/projects/019.jsProjects/08-tipCalculator/index.html
+++ b/projects/019.jsProjects/08-tipCalculator/index.html
@@ -13,23 +13,25 @@
         <h3>TIP CALCULATOR</h3>
         <div class="card-body">
             <h5>How Much Was Your Bill ?</h5>
-            <div id="bill">
+            <div class="bill inputDiv">
                 <span class="icon">$</span>
                 <input type="number">
             </div>
             <h5>How Many People Sharing The Bill ?</h5>
-            <div id="people">
+            <div class="people inputDiv">
                 <span class="icon">8</span>
                 <input type="number">
             </div>
             <h5>How Was Your Service ?</h5>
-            <select name="" id="service">
-              <option value="empty" selected></option>
+            <div class="service">
+                <select name="">
+              <option value="Choose..." selected></option>
               <option value="fish">ish</option>
               <option value="shark">shark</option>
               <option value="dolphin">dolphin</option>
               <option value="crocs">crocs</option>
             </select><br>
+            </div>
             <div class="btn-container">
                 <input id="btn" type="button" value="Calculate">
             </div>
