project 8 - still styling: input outer shadow

--- a/projects/019.jsProjects/08-tipCalculator/index.html
+++ b/projects/019.jsProjects/08-tipCalculator/index.html
@@ -24,12 +24,13 @@
             </div>
             <h5>How Was Your Service ?</h5>
             <div class="service">
-                <select name="">
-              <option value="Choose..." selected></option>
-              <option value="fish">ish</option>
-              <option value="shark">shark</option>
-              <option value="dolphin">dolphin</option>
-              <option value="crocs">crocs</option>
+                <select id="select">
+              <option value="0" selected>Choose...</option>
+              <option value="1">Great - 20%</option>
+              <option value="2">Good - 15%</option>
+              <option value="3">Normal - 10%</option>
+              <option value="4">Bad - 5%</option>
+              <option value="5">None - 0%</option>
             </select><br>
             </div>
             <div class="btn-container">
